--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-source venv/bin/activate
+REDISCLOUD_URL=redis://rediscloud:KmXgo6zR7fo9Y6eF@pub-redis-18355.us-east-1-4.5.ec2.garantiadata.com:18355
