--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,15 @@ gunicorn==19.3.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+nose==1.3.7
+numpy==1.10.1
+pbr==1.8.1
 redis==2.10.5
+six==1.10.0
+stevedore==1.9.0
+virtualenv==13.1.0
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
+virtualenvwrapper-win==1.2.1
 Werkzeug==0.10.4
 wheel==0.24.0
